--- a/googletest/.package.yml
+++ b/googletest/.package.yml
@@ -1,4 +1,10 @@
-source: https://github.com/google/googletest.git
+development:
+  libraries:
+    - name: Zefiros-Software/GoogleTest
+      version: master
+      definition: ./
+      repository: https://github.com/google/googletest.git
+
 extract:
   includes:
     - "googletest/include/**/*.h"
