--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,6 @@ add_subdirectory("flathashmap" "flathashmap")
 add_subdirectory("nanorange" "nanorange")
 add_subdirectory("taskflow" "taskflow")
 add_subdirectory("nlohmannjson" "nlohmannjson")
+add_subdirectory("glm" "glm")
+add_subdirectory("fmt" "fmt")
+add_subdirectory("spdlog" "spdlog")
