--- a/nlohmannjson/.package.yml
+++ b/nlohmannjson/.package.yml
@@ -8,3 +8,10 @@ development:
 extract:
   includes:
     - "include/**/*.hpp"
+
+build:
+  template: headeronly
+  includes:
+    - include
+  features:
+    - cxx_std_11
