--- a/simdpp/.package.yml
+++ b/simdpp/.package.yml
@@ -10,3 +10,7 @@ extract:
     - "simdpp/**/*.h"
     - "simdpp/**/*.hpp"
     - "simdpp/**/*.inl"
+build:
+  template: headeronly
+  includes:
+    - ./
