--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.8
+    - llvm-toolchain-trusty-5.0
     packages:
-    - g++-6
-    - clang-3.8
+    - g++-7
+    - clang-5.0
 install:
-- "[ $CXX = g++ ] && export CXX=g++-6 || true"
-- "[ $CXX = clang++ ] && export CXX=clang++-3.8 || true"
+- "[ $CXX = g++ ] && export CXX=g++-7 || true"
+- "[ $CXX = clang++ ] && export CXX=clang++-5.0 || true"
 script:
   - npm install -g zpmpkg/zpm#alpha
   - cmake .
