--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ addons:
     - llvm-toolchain-trusty-8
     packages:
     - g++-7
-    - clang-8
+    - clang-8    
+    - cmake
 install:
 - "[ $CXX = g++ ] && export CXX=g++-7 || true"
 - "[ $CXX = clang++ ] && export CXX=clang++-8 || true"
