--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ addons:
     packages:
     - g++-7
     - clang-8    
-    - cmake
 install:
+- pip install cmake
 - "[ $CXX = g++ ] && export CXX=g++-7 || true"
 - "[ $CXX = clang++ ] && export CXX=clang++-8 || true"
 script:
