add custom taskflow code

--- a/taskflow/.package.yml
+++ b/taskflow/.package.yml
@@ -14,3 +14,9 @@ build:
     - ./
   features:
     - cxx_std_17
+
+  custom:
+    - |
+      if(UNIX)
+      target_link_libraries("${PROJECT_NAME}" INTERFACE pthread)
+      endif()
