improved osx and windows support

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,26 @@ matrix:
   include:
     - os: osx
       osx_image: xcode10.2
-      compiler:
-        - clang
+      compiler: clang
+      install: 
+        - export CC=/usr/local/opt/llvm/bin/clang 
+        - export CXX=/usr/local/opt/llvm/bin/clang++ 
+        - export AR=/usr/local/opt/llvm/bin/llvm-ar 
+        - export LD=/usr/local/opt/llvm/bin/llvm-ld 
+        - export LDFLAGS=\"-L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib\" 
+        - export CPPFLAGS=\"-I/usr/local/opt/llvm/include -I/usr/local/opt/llvm/include/c++/v1/\"
     - os: windows
-      compiler:
-        - clang
+      compiler: clang
       before_install:
-        - choco install pip
+        - choco install miniconda3
     - os: linux
-      compiler:
-        - gcc
-        - clang
+      compiler: clang
+      install:      
+        - "[ $CXX = clang++ ] && export CXX=clang++-8 || true"
+    - os: linux
+      compiler: gcc
       install:      
         - "[ $CXX = g++ ] && export CXX=g++-7 || true"
-        - "[ $CXX = clang++ ] && export CXX=clang++-8 || true"
 addons:
   apt:
     sources:
