improved osx and windows support

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ matrix:
     - os: windows
       compiler: clang
       before_install:
-        - choco install python3 && refreshenv
+        - choco install python3
+        - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+        - python -m pip install --upgrade pip wheel
     - os: linux
       compiler: clang
       install:      
