--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
         - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
         - python -m pip install --upgrade pip wheel
         - choco install nodejs 
+        - export PATH="/c/Program\ Files/nodejs/node_modules:/c/Program\ Files/nodejs:$PATH"
     - os: linux
       compiler: clang
       install:      
