--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
         - choco install nodejs.install
         - export PATH="/C/Users/travis/AppData/Roaming/Python/Python37/Scripts:/c/ProgramData/chocolatey/lib/nodejs.commandline.11.14.0/tools:$PATH"
         - tail /c/ProgramData/chocolatey/logs/chocolatey.log -n 100
+        - call RefreshEnv.cmd
     - os: linux
       compiler: clang
       install:      
