--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,13 @@ matrix:
       #   - export LDFLAGS="-L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib" 
       #   - export CPPFLAGS="-I/usr/local/opt/llvm/include -I/usr/local/opt/llvm/include/c++/v1/"
     - os: windows
+      language: node_js
       compiler: clang
       before_install:
         - choco install python3
         - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
         - python -m pip install --upgrade pip wheel
-        - choco install nodejs.install
-        - export PATH="/C/Users/travis/AppData/Roaming/Python/Python37/Scripts:/c/ProgramData/chocolatey/lib/nodejs.commandline.11.14.0/tools:$PATH"
-        - tail /c/ProgramData/chocolatey/logs/chocolatey.log -n 100
-        - call RefreshEnv.cmd
+        - export PATH="/C/Users/travis/AppData/Roaming/Python/Python37/Scripts:$PATH"
     - os: linux
       compiler: clang
       install:      
