--- a/nanorange/.package.yml
+++ b/nanorange/.package.yml
@@ -14,3 +14,8 @@ build:
     - single_include
   features:
     - cxx_std_17
+  custom:
+    - |
+      if (MSVC)
+      target_compile_options("${PROJECT_NAME}" INTERFACE /permissive-)
+      endif()
