--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ addons:
 
 before_script:
   - pip install --user cmake
+  - where cmake
+  - cmake --version
   - npm install -g zpmpkg/zpm#alpha
 script:
   - zpm
