--- a/.travis.yml
+++ b/.travis.yml
@@ -37,13 +37,9 @@ addons:
 
 before_script:
   - pip install --user cmake
-  - where cmake
-  - cmake --version
-  - where ctest
-  - ctest --version
   - npm install -g zpmpkg/zpm#alpha
 script:
   - zpm
   - cmake .
   - cmake --build .
-  - ctest
+  - ctest -c Debug
