--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory("nlohmannjson" "nlohmannjson")
 add_subdirectory("glm" "glm")
 add_subdirectory("fmt" "fmt")
 add_subdirectory("spdlog" "spdlog")
+add_subdirectory("range-v3" "range-v3")
