--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
         - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
         - python -m pip install --upgrade pip wheel
         - export PATH="/C/Users/travis/AppData/Roaming/Python/Python37/Scripts:$PATH"
+      env:
+        - export CMAKE_CONFIG_TYPE=Debug
     - os: linux
       compiler: clang
       install:      
