--- a/range-v3/.package.yml
+++ b/range-v3/.package.yml
@@ -14,3 +14,8 @@ build:
     - include
   features:
     - cxx_std_17
+  custom:
+    - |
+      if (MSVC)
+      target_compile_options("${PROJECT_NAME}" INTERFACE /permissive-)
+      endif()
