--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory("glm" "glm")
 add_subdirectory("fmt" "fmt")
 add_subdirectory("spdlog" "spdlog")
 add_subdirectory("range-v3" "range-v3")
+#add_subdirectory("boost" "boost")
