--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ include("extern/ZPM")
 
 zpm_defaults()
 
-add_subdirectory("googletest" "googletest")
+#add_subdirectory("googletest" "googletest")
 add_subdirectory("simdpp" "simdpp")
 add_subdirectory("flathashmap" "flathashmap")
 add_subdirectory("nanorange" "nanorange")
@@ -14,4 +14,4 @@ add_subdirectory("glm" "glm")
 add_subdirectory("fmt" "fmt")
 add_subdirectory("spdlog" "spdlog")
 add_subdirectory("range-v3" "range-v3")
-#add_subdirectory("boost" "boost")
+add_subdirectory("boost" "boost")
