--- a/googletest/CMakeLists.txt
+++ b/googletest/CMakeLists.txt
@@ -1,14 +1,19 @@
 cmake_minimum_required(VERSION 3.13)
 
 if(NOT ZPM_LOADED)
-    include("extern/ZPM")
+  include("extern/ZPM")
 
-    zpm_defaults()
+  zpm_defaults()
 endif()
 
-project(GoogleTestExample LANGUAGES CXX)
+add_executable(googletest
+    "gmock/test/fizzbuzz.cpp"
+    "gtest/test/main.cpp"
+    "gtest/test/simple_lib.cpp"
+)
 
-add_executable(test-gtest test/main.cpp)
-target_link_libraries(test-gtest PRIVATE Zefiros-Software::GoogleTest)
+target_link_libraries(googletest PRIVATE 
+    Zefiros-Software::GoogleTest
+)
 
-add_test(NAME test-gtest COMMAND test-gtest)
+add_test(NAME googletest COMMAND googletest)
