--- a/range-v3/.zpm.yml
+++ b/range-v3/.zpm.yml
@@ -1,21 +1,28 @@
 development:
   libraries:
     - name: Zefiros-Software/range-v3
-      version: master
+      version: 0.5.0
       definition: ./
       repository: https://github.com/ericniebler/range-v3.git
 
 extract:
-  includes:
+  include:
     - "include/**/*.hpp"
 build:
   template: headeronly
-  includes:
+  include:
     - include
-  features:
+  feature:
     - cxx_std_17
-  custom:
-    - |
+  custom: |
       if (MSVC)
       target_compile_options("${PROJECT_NAME}" INTERFACE /permissive-)
       endif()
+
+  self:
+    template: library-test
+    source:
+      - "test/**.cpp"
+    private:
+      link:
+        - Zefiros-Software/range-v3
