--- a/spdlog/CMakeLists.txt
+++ b/spdlog/CMakeLists.txt
@@ -1,14 +1,17 @@
 cmake_minimum_required(VERSION 3.13)
 
 if(NOT ZPM_LOADED)
-    include("extern/ZPM")
+  include("extern/ZPM")
 
-    zpm_defaults()
+  zpm_defaults()
 endif()
 
-project(GoogleTestExample LANGUAGES CXX)
+add_executable(spdlog
+    "test/main.cpp"
+)
 
-add_executable(test-spdlog test/main.cpp)
-target_link_libraries(test-spdlog PRIVATE Zefiros-Software::spdlog)
+target_link_libraries(spdlog PRIVATE 
+    Zefiros-Software::spdlog
+)
 
-add_test(NAME test-spdlog COMMAND test-spdlog)
+add_test(NAME spdlog COMMAND spdlog)
