--- a/taskflow/.zpm.yml
+++ b/taskflow/.zpm.yml
@@ -6,17 +6,24 @@ development:
       repository: https://github.com/cpp-taskflow/cpp-taskflow.git
 
 extract:
-  includes:
+  include:
     - "taskflow/**/*.hpp"
 build:
   template: headeronly
-  includes:
+  include:
     - ./
-  features:
+  feature:
     - cxx_std_17
 
-  custom:
-    - |
+  custom: |
       if(UNIX)
-      target_link_libraries("${PROJECT_NAME}" INTERFACE pthread)
+        target_link_libraries("${PROJECT_NAME}" INTERFACE pthread)
       endif()
+
+  self:
+    template: library-test
+    source:
+      - "test/**.cpp"
+    private:
+      link:
+        - Zefiros-Software/taskflow
