--- a/boost/CMakeLists.txt
+++ b/boost/CMakeLists.txt
@@ -1,14 +1,17 @@
 cmake_minimum_required(VERSION 3.13)
 
 if(NOT ZPM_LOADED)
-    include("extern/ZPM")
+  include("extern/ZPM")
 
-    zpm_defaults()
+  zpm_defaults()
 endif()
 
-project(GoogleTestExample LANGUAGES CXX)
+add_executable(boost
+    "test/main.cpp"
+)
 
-add_executable(test-boost test/main.cpp)
-target_link_libraries(test-boost PRIVATE Zefiros-Software::boost)
+target_link_libraries(boost PRIVATE 
+    Zefiros-Software::boost
+)
 
-add_test(NAME test-boost COMMAND test-boost)
+add_test(NAME boost COMMAND boost)
