--- a/fmt/CMakeLists.txt
+++ b/fmt/CMakeLists.txt
@@ -1,14 +1,17 @@
 cmake_minimum_required(VERSION 3.13)
 
 if(NOT ZPM_LOADED)
-    include("extern/ZPM")
+  include("extern/ZPM")
 
-    zpm_defaults()
+  zpm_defaults()
 endif()
 
-project(GoogleTestExample LANGUAGES CXX)
+add_executable(fmt
+    "test/main.cpp"
+)
 
-add_executable(test-fmt test/main.cpp)
-target_link_libraries(test-fmt PRIVATE Zefiros-Software::fmt)
+target_link_libraries(fmt PRIVATE 
+    Zefiros-Software::fmt
+)
 
-add_test(NAME test-fmt COMMAND test-fmt)
+add_test(NAME fmt COMMAND fmt)
