--- a/glm/.zpm.yml
+++ b/glm/.zpm.yml
@@ -6,14 +6,22 @@ development:
       repository: https://github.com/g-truc/glm.git
 
 extract:
-  includes:
+  include:
     - "glm/**"
 build:
   template: headeronly
-  includes:
+  include:
     - ./
-  features:
+  feature:
     - cxx_std_11
-  defines:
+  define:
     - GLM_FORCE_SWIZZLE
     - GLM_ENABLE_EXPERIMENTAL
+
+  self:
+    template: library-test
+    source:
+      - "test/**.cpp"
+    private:
+      link:
+        - Zefiros-Software/glm
