--- a/nanorange/CMakeLists.txt
+++ b/nanorange/CMakeLists.txt
@@ -1,14 +1,17 @@
 cmake_minimum_required(VERSION 3.13)
 
 if(NOT ZPM_LOADED)
-    include("extern/ZPM")
+  include("extern/ZPM")
 
-    zpm_defaults()
+  zpm_defaults()
 endif()
 
-project(GoogleTestExample LANGUAGES CXX)
+add_executable(nanorange
+    "test/main.cpp"
+)
 
-add_executable(test-nanorange test/main.cpp)
-target_link_libraries(test-nanorange PRIVATE Zefiros-Software::nanorange)
+target_link_libraries(nanorange PRIVATE 
+    Zefiros-Software::nanorange
+)
 
-add_test(NAME test-nanorange COMMAND test-nanorange)
+add_test(NAME nanorange COMMAND nanorange)
