--- a/nlohmannjson/CMakeLists.txt
+++ b/nlohmannjson/CMakeLists.txt
@@ -1,14 +1,17 @@
 cmake_minimum_required(VERSION 3.13)
 
 if(NOT ZPM_LOADED)
-    include("extern/ZPM")
+  include("extern/ZPM")
 
-    zpm_defaults()
+  zpm_defaults()
 endif()
 
-project(GoogleTestExample LANGUAGES CXX)
+add_executable(nlohmannjson
+    "test/main.cpp"
+)
 
-add_executable(test-nlohmannjson test/main.cpp)
-target_link_libraries(test-nlohmannjson PRIVATE Zefiros-Software::nlohmannjson)
+target_link_libraries(nlohmannjson PRIVATE 
+    Zefiros-Software::nlohmannjson
+)
 
-add_test(NAME test-nlohmannjson COMMAND test-nlohmannjson)
+add_test(NAME nlohmannjson COMMAND nlohmannjson)
