--- a/simdpp/CMakeLists.txt
+++ b/simdpp/CMakeLists.txt
@@ -1,14 +1,17 @@
 cmake_minimum_required(VERSION 3.13)
 
 if(NOT ZPM_LOADED)
-    include("extern/ZPM")
+  include("extern/ZPM")
 
-    zpm_defaults()
+  zpm_defaults()
 endif()
 
-project(GoogleTestExample LANGUAGES CXX)
+add_executable(simdpp
+    "test/main.cpp"
+)
 
-add_executable(test-simdpp test/main.cpp)
-target_link_libraries(test-simdpp PRIVATE Zefiros-Software::simdpp)
+target_link_libraries(simdpp PRIVATE 
+    Zefiros-Software::simdpp
+)
 
-add_test(NAME test-simdpp COMMAND test-simdpp)
+add_test(NAME simdpp COMMAND simdpp)
