--- a/spdlog/.zpm.yml
+++ b/spdlog/.zpm.yml
@@ -4,24 +4,32 @@ development:
       version: ^1.3.1
       definition: ./
       repository: https://github.com/gabime/spdlog.git
-    # - name: Zefiros-Software/fmt
-    #   version: '^5.0.0'
-    #   definition: ../fmt
-    #   repository: https://github.com/fmtlib/fmt.git
+    - name: Zefiros-Software/fmt
+      version: '^5.0.0'
+      definition: ../fmt
+      repository: https://github.com/fmtlib/fmt.git
 
 
-# libraries:
-#   - name: Zefiros-Software/fmt
-#     version: '^5.0.0'
+libraries:
+  - name: Zefiros-Software/fmt
+    version: '^5.0.0'
 
 extract:
-  includes:
+  include:
     - "include/**/*.h"
 build:
   template: headeronly
-  includes:
+  include:
     - include
-  defines:
+  define:
     - SPDLOG_FMT_EXTERNAL
-  links:
+  link:
     - Zefiros-Software/fmt
+
+  self:
+    template: library-test
+    source:
+      - "test/**.cpp"
+    private:
+      link:
+        - Zefiros-Software/spdlog
