--- a/taskflow/CMakeLists.txt
+++ b/taskflow/CMakeLists.txt
@@ -1,14 +1,17 @@
 cmake_minimum_required(VERSION 3.13)
 
 if(NOT ZPM_LOADED)
-    include("extern/ZPM")
+  include("extern/ZPM")
 
-    zpm_defaults()
+  zpm_defaults()
 endif()
 
-project(GoogleTestExample LANGUAGES CXX)
+add_executable(taskflow
+    "test/main.cpp"
+)
 
-add_executable(test-taskflow test/main.cpp)
-target_link_libraries(test-taskflow PRIVATE Zefiros-Software::taskflow)
+target_link_libraries(taskflow PRIVATE 
+    Zefiros-Software::taskflow
+)
 
-add_test(NAME test-taskflow COMMAND test-taskflow)
+add_test(NAME taskflow COMMAND taskflow)
