chore: link pthread

--- a/boost/.zpm.yml
+++ b/boost/.zpm.yml
@@ -39,12 +39,15 @@ build:
       )
 
       else()
-
+      
+      find_package(Threads REQUIRED)
       target_sources("${PROJECT_NAME}" PRIVATE
         {{#each globs.pthread}}
         {{this}}
         {{/each}}
       )
+
+      target_link_libraries("${PROJECT_NAME}" Threads::Threads)
       
       endif()
 
