--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ include("extern/ZPM")
 
 zpm_defaults()
 
-#add_subdirectory("googletest" "googletest")
+add_subdirectory("googletest" "googletest")
 add_subdirectory("simdpp" "simdpp")
 add_subdirectory("flathashmap" "flathashmap")
 add_subdirectory("nanorange" "nanorange")
