--- a/.gitignore
+++ b/.gitignore
@@ -408,5 +408,5 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 /*/.package.lock
-*/CMakeLists.txt
+*/**/CMakeLists.txt
 *.zpm.lock
