--- a/range-v3/.zpm.yml
+++ b/range-v3/.zpm.yml
@@ -14,10 +14,11 @@ build:
     - include
   feature:
     - cxx_std_17
-  custom: |
-      if (MSVC)
-      target_compile_options("${PROJECT_NAME}" INTERFACE /permissive-)
-      endif()
+  conditions:
+    - on: MSVC
+      let:
+        options: 
+          - /permissive-
 
   self:
     template: library-test
