--- a/taskflow/.zpm.yml
+++ b/taskflow/.zpm.yml
@@ -17,9 +17,8 @@ build:
   conditions:
     - on: UNIX
       let:
-        custom: |
-          find_package(Threads REQUIRED)
-          target_link_libraries("${PROJECT_NAME}" Threads::Threads)
+        link:
+          - Threads::Threads
 
   self:
     template: library-test
