--- a/googletest/gtest/.zpm.yml
+++ b/googletest/gtest/.zpm.yml
@@ -17,13 +17,11 @@ build:
     - googletest/include
   feature:
     - cxx_std_11
+  link:
+    - Threads::Threads
   private:
     include: 
       - googletest
-      
-  custom: |
-      find_package(Threads REQUIRED)
-      target_link_libraries("${PROJECT_NAME}" Threads::Threads)
 
   self:
     template: library-test
