--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
         - python -m pip install --upgrade pip wheel
         - export PATH="/C/Users/travis/AppData/Roaming/Python/Python37/Scripts:$PATH"
       env:
-        - CONFIG_TYPE="-C Release"
+        - CONFIG_TYPE="--config Release"
     - os: linux
       compiler: clang
       install:      
@@ -44,5 +44,5 @@ script:
   - echo $CONFIG_TYPE
   - zpm
   - cmake .
-  - cmake --build .
+  - cmake --build $CONFIG_TYPE .
   - ctest $CONFIG_TYPE
