--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
         - python -m pip install --upgrade pip wheel
         - export PATH="/C/Users/travis/AppData/Roaming/Python/Python37/Scripts:$PATH"
       env:
-        - CONFIG_TYPE="-C Release"
-        - CTEST_CONFIG_TYPE="--config Release"
+        - CONFIG_TYPE="--config Release"
+        - CTEST_CONFIG_TYPE="-C Release"
     - os: linux
       compiler: clang
       install:      
