--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,6 @@ add_subdirectory("fmt" "fmt")
 add_subdirectory("spdlog" "spdlog")
 add_subdirectory("range-v3" "range-v3")
 add_subdirectory("boost" "boost")
+add_subdirectory("gainput" "gainput")
+add_subdirectory("glfw" "glfw")
+add_subdirectory("predef" "predef")
