--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,8 @@ addons:
     - libxrandr-dev 
     - libxinerama-dev 
     - libxi-dev
+    - libg1-mesa-dev 
+    - libglu1-mesa-dev
   homebrew:
     packages:
       - node
