--- a/gainput/.zpm.yml
+++ b/gainput/.zpm.yml
@@ -30,11 +30,11 @@ build:
         source:
           - "lib/source/**Mac.mm"
         link: 
-          - framework IOKit.framework
-          - framework CoreFoundation.framework
-          - framework GameController.framework
-          - framework CoreGraphics.framework
-          - framework Cocoa.framework
+          - "-framework IOKit.framework"
+          - "-framework CoreFoundation.framework"
+          - "-framework GameController.framework"
+          - "-framework CoreGraphics.framework"
+          - "-framework Cocoa.framework"
 
     - on: UNIX
       chain: elseif
